syntax = "proto3";
package api;
option go_package = ".;api";

service CustomerService {
    rpc AddCustomer (AddCustomerRequest) returns (AddCustomerReply){}
}

message Customer {
    string name = 1;
    Address address = 2;
}

message Address {
    string street = 1;
    string zip = 3;
    string city = 4;
    string country = 5;
}

message AddCustomerRequest {
    Customer customer = 1;
}

message AddCustomerReply {
    Customer customer = 1;
}
